--- a/IDA-practice-4/nb-practice-4.ipynb
+++ b/IDA-practice-4/nb-practice-4.ipynb
@@ -17,7 +17,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, RandomizedSearchCV, learning_curve, ShuffleSplit, cross_val_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import f1_score, roc_auc_score, roc_curve\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "# from pandas_profiling import ProfileReport\n",
+    "from sklearn.impute import KNNImputer\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "# import lightgbm as lgb\n",
+    "from sklearn import svm\n",
+    "from scipy.special import boxcox1p\n",
+    "from scipy.stats import boxcox_normmax\n",
+    "pd.set_option('display.max_columns', 50)\n",
+    "pd.set_option('display.max_rows', 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -182,52 +212,102 @@
        "[10127 rows x 5 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas\n",
-    "import numpy as np\n",
-    "import io\n",
+    "# import pandas\n",
+    "# import numpy as np\n",
+    "# import io\n",
     "\n",
-    "data = pandas.read_csv('C:\\\\Users\\\\averu\\\\Documents\\\\git_local\\\\programming-practice\\\\IDA-practice-4\\\\BankChurners.csv', index_col='CLIENTNUM')\n",
+    "data = pd.read_csv('C:\\\\Users\\\\averu\\\\Documents\\\\git_local\\\\programming-practice\\\\IDA-practice-4\\\\BankChurners.csv', index_col='CLIENTNUM')\n",
     "\n",
-    "data_set = data.loc[:, data.columns.isin(['Marital_Status', 'Credit_Limit', 'Customer_Age', 'Gender', 'Education_Level', 'Income_Category', 'Months_on_book'])]\n",
+    "bank_df = data.loc[:, data.columns.isin(['Marital_Status', 'Credit_Limit', 'Customer_Age', 'Gender', 'Education_Level', 'Income_Category', 'Months_on_book'])]\n",
     "\n",
-    "data_set = data_set.dropna()\n",
+    "bank_df = bank_df.dropna()\n",
     "\n",
-    "data_set['Gender']          = np.where(data_set['Gender'] == 'M', 1, 0)\n",
+    "bank_df['Gender']          = np.where(bank_df['Gender'] == 'M', 1, 0)\n",
     "\n",
-    "data_set['Education_Level'] = np.where(data_set['Education_Level'] == 'Unknown' , 1 , data_set['Education_Level'])\n",
-    "data_set['Education_Level'] = np.where(data_set['Education_Level'] == 'Uneducated' , 1 , data_set['Education_Level'])\n",
-    "data_set['Education_Level'] = np.where(data_set['Education_Level'] == 'High School' , 2 , data_set['Education_Level'])\n",
-    "data_set['Education_Level'] = np.where(data_set['Education_Level'] == 'Graduate' , 3 , data_set['Education_Level'])\n",
-    "data_set['Education_Level'] = np.where(data_set['Education_Level'] == 'College', 3 , data_set['Education_Level'])\n",
-    "data_set['Education_Level'] = np.where(data_set['Education_Level'] == 'Post-Graduate' , 4 , data_set['Education_Level'])\n",
-    "data_set['Education_Level'] = np.where(data_set['Education_Level'] == 'Doctorate' , 4 , data_set['Education_Level'])\n",
+    "bank_df['Education_Level'] = np.where(bank_df['Education_Level'] == 'Unknown' , 1 , bank_df['Education_Level'])\n",
+    "bank_df['Education_Level'] = np.where(bank_df['Education_Level'] == 'Uneducated' , 1 , bank_df['Education_Level'])\n",
+    "bank_df['Education_Level'] = np.where(bank_df['Education_Level'] == 'High School' , 2 , bank_df['Education_Level'])\n",
+    "bank_df['Education_Level'] = np.where(bank_df['Education_Level'] == 'Graduate' , 3 , bank_df['Education_Level'])\n",
+    "bank_df['Education_Level'] = np.where(bank_df['Education_Level'] == 'College', 3 , bank_df['Education_Level'])\n",
+    "bank_df['Education_Level'] = np.where(bank_df['Education_Level'] == 'Post-Graduate' , 4 , bank_df['Education_Level'])\n",
+    "bank_df['Education_Level'] = np.where(bank_df['Education_Level'] == 'Doctorate' , 4 , bank_df['Education_Level'])\n",
     "\n",
-    "data_set['Income_Category'] = np.where(data_set['Income_Category'] == 'Unknown' , 0, data_set['Income_Category'])\n",
-    "data_set['Income_Category'] = np.where(data_set['Income_Category'] == 'Less than $40K' , 1, data_set['Income_Category'])\n",
-    "data_set['Income_Category'] = np.where(data_set['Income_Category'] == '$40K - $60K' , 2, data_set['Income_Category'])\n",
-    "data_set['Income_Category'] = np.where(data_set['Income_Category'] == '$60K - $80K' , 3, data_set['Income_Category'])\n",
-    "data_set['Income_Category'] = np.where(data_set['Income_Category'] == '$80K - $120K' , 4, data_set['Income_Category'])\n",
-    "data_set['Income_Category'] = np.where(data_set['Income_Category'] == '$120K +' , 5, data_set['Income_Category'])\n",
+    "bank_df['Income_Category'] = np.where(bank_df['Income_Category'] == 'Unknown' , 0, bank_df['Income_Category'])\n",
+    "bank_df['Income_Category'] = np.where(bank_df['Income_Category'] == 'Less than $40K' , 1, bank_df['Income_Category'])\n",
+    "bank_df['Income_Category'] = np.where(bank_df['Income_Category'] == '$40K - $60K' , 2, bank_df['Income_Category'])\n",
+    "bank_df['Income_Category'] = np.where(bank_df['Income_Category'] == '$60K - $80K' , 3, bank_df['Income_Category'])\n",
+    "bank_df['Income_Category'] = np.where(bank_df['Income_Category'] == '$80K - $120K' , 4, bank_df['Income_Category'])\n",
+    "bank_df['Income_Category'] = np.where(bank_df['Income_Category'] == '$120K +' , 5, bank_df['Income_Category'])\n",
     "\n",
-    "data_set['Credit_Limit']    = np.where([ (float(x) > 10000) for x in data_set['Credit_Limit'] ] , 1 , 0)\n",
-    "# data_set['Credit_Limit']    = [ (float(x) > 10000) for x in data_set['Credit_Limit'] ]\n",
+    "bank_df['Credit_Limit']    = np.where([ (float(x) > 10000) for x in bank_df['Credit_Limit'] ] , 1 , 0)\n",
+    "# bank_df['Credit_Limit']    = [ (float(x) > 10000) for x in bank_df['Credit_Limit'] ]\n",
     "\n",
-    "data_set['Marital_Status'] = np.where(data_set['Marital_Status'] == 'Married' , False, data_set['Marital_Status'])\n",
-    "data_set['Marital_Status'] = np.where(data_set['Marital_Status'] == 'Single' , True, data_set['Marital_Status'])\n",
-    "data_set['Marital_Status'] = np.where(data_set['Marital_Status'] == 'Divorced' , True, data_set['Marital_Status'])\n",
-    "data_set['Marital_Status'] = np.where(data_set['Marital_Status'] == 'Unknown' , True, data_set['Marital_Status'])\n",
+    "bank_df['Marital_Status'] = np.where(bank_df['Marital_Status'] == 'Married' , False, bank_df['Marital_Status'])\n",
+    "bank_df['Marital_Status'] = np.where(bank_df['Marital_Status'] == 'Single' , True, bank_df['Marital_Status'])\n",
+    "bank_df['Marital_Status'] = np.where(bank_df['Marital_Status'] == 'Divorced' , True, bank_df['Marital_Status'])\n",
+    "bank_df['Marital_Status'] = np.where(bank_df['Marital_Status'] == 'Unknown' , True, bank_df['Marital_Status'])\n",
     "\n",
-    "M_status = data_set.loc[:, data_set.columns.isin(['Marital_Status'])]\n",
-    "# settings = data_set.loc[:, data_set.columns.isin(['Credit_Limit', 'Customer_Age', 'Gender', 'Education_Level', 'Income_Category' , 'Months_on_book'])]\n",
-    "settings = data_set.loc[:, data_set.columns.isin(['Customer_Age', 'Gender', 'Education_Level', 'Income_Category' , 'Months_on_book'])]\n",
+    "M_status = bank_df.loc[:, bank_df.columns.isin(['Marital_Status'])]\n",
+    "# settings = bank_df.loc[:, bank_df.columns.isin(['Credit_Limit', 'Customer_Age', 'Gender', 'Education_Level', 'Income_Category' , 'Months_on_book'])]\n",
+    "settings = bank_df.loc[:, bank_df.columns.isin(['Customer_Age', 'Gender', 'Education_Level', 'Income_Category' , 'Months_on_book'])]\n",
     "\n",
     "settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Standardize\n",
+    "std = StandardScaler()\n",
+    "std_df = pd.DataFrame(std.fit_transform(bank_df.iloc[:,1:]), \n",
+    "                      index = bank_df.index, \n",
+    "                      columns = bank_df.columns[1:])\n",
+    "std_bank_df = pd.concat([bank_df.iloc[:,0], std_df], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Разделение выборки на обучающаю и тестовую\n",
+    "# x_train, x_test, y_train, y_test = train_test_split(settings, M_status, test_size=0.35, random_state=2020)\n",
+    "# SVM\n",
+    "X_train, X_test, y_train, y_test = train_test_split(bank_df.iloc[:,1:], bank_df.iloc[:,0], test_size=0.25, random_state=42)\n",
+    "svm_clf = svm.SVC()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy:0.09557577316774642\n",
+      "f1:nan\n",
+      "precision:nan\n",
+      "recall:nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "print( \"accuracy:\"+str(np.average(cross_val_score(svm_clf, X_test, y_test, scoring=  'accuracy'))))\n",
+    "print(       \"f1:\"+str(np.average(cross_val_score(svm_clf, X_test, y_test, scoring=  'f1'))))\n",
+    "print(\"precision:\"+str(np.average(cross_val_score(svm_clf, X_test, y_test, scoring=  'precision'))))\n",
+    "print(   \"recall:\"+str(np.average(cross_val_score(svm_clf, X_test, y_test, scoring=  'recall'))))\n"
    ]
   },
   {
@@ -243,10 +323,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import SGDClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn import datasets\n"
+    "# from sklearn.linear_model import SGDClassifier\n",
+    "# from sklearn.linear_model import LogisticRegression\n",
+    "# from sklearn.model_selection import train_test_split\n",
+    "# from sklearn import datasets\n"
    ]
   },
   {
@@ -258,13 +338,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Разделение выборки на обучающаю и тестовую\n",
-    "x_train, x_test, y_train, y_test = train_test_split(settings, M_status, test_size=0.35, random_state=2020)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
