--- a/IDA-practice-4/solution.ipynb
+++ b/IDA-practice-4/solution.ipynb
@@ -1,8 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Практическая работа №4\n",
+    "##### Сиразетдинов Рустем (Вариант - 24)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "0.0 Подключение библиотек"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +46,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "0.1 Чтение файла с данными"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +75,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "0.2 Сравнение количества активных пользователей разних тарифов карт"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,8 +160,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "0.3 Привеление строковых данных к целочисленным"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -564,15 +600,12 @@
        "[10127 rows x 22 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Feature Engineering\n",
-    "\n",
-    "# KNN for Unknown\n",
     "tmp_bank_df = bank_df.copy()\n",
     "\n",
     "le_ls = []\n",
@@ -605,8 +638,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "0.4 Введение новых опорных столбцов и стандартизация данных"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,8 +890,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Классификация клиентов банка по их `Семейному положению` методом опорных векторов"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +908,11 @@
       "accuracy:0.9107452191064231\n",
       "f1:0.6753863683053034\n",
       "precision:0.8492326563990732\n",
-      "recall:0.5633390705679862\n"
+      "recall:0.5633390705679862\n",
+      "accuracy:0.9048280593431095\n",
+      "f1:0.7060378855046817\n",
+      "precision:0.7263938934825012\n",
+      "recall:0.6875215146299484\n"
      ]
     }
    ],
@@ -870,43 +921,79 @@
     "X_train, X_test, y_train, y_test = train_test_split(std_bank_df.iloc[:,1:], std_bank_df.iloc[:,0], test_size=0.25, random_state=42)\n",
     "svm_clf = svm.SVC()\n",
     "\n",
-    "# svm_param = {'C': [0.1, 1, 10, 100], \n",
-    "#              'gamma': ['scale', 'auto'],\n",
-    "#              'kernel': ['rbf', 'poly', 'sigmoid'],\n",
-    "#              'probability':[True],\n",
-    "#              'class_weight':['balanced', 'none']}\n",
-    "# svm_grid = GridSearchCV(svm_clf, svm_param, n_jobs=-1, cv=5, verbose=1)\n",
-    "# svm_grid.fit(X_train, y_train)\n",
-    "# print(\"Best param: \", svm_grid.best_params_)\n",
-    "# svm_pred = svm_grid.predict(X_test)\n",
-    "# svm_pred_prob = svm_grid.predict_proba(X_test)[:,1]\n",
-    "# svm_pred_df = pd.DataFrame({\"pred\":svm_pred, \"prob\":svm_pred_prob, \"actual\":y_test})\n",
-    "# # mannually adjust pred based on prob\n",
-    "# thresh = np.quantile(svm_pred_prob, (1-y_train.mean()))\n",
-    "# svm_pred_df['pred'] = (svm_pred_df['prob']>thresh).astype(int)\n",
-    "# svm_pred_df\n",
+    "estimator = svm.SVC(C=10, \n",
+    "                    class_weight='balanced', \n",
+    "                    gamma='scale', \n",
+    "                    kernel='rbf', \n",
+    "                    probability=True)\n",
     "\n",
-    "# X, y = std_bank_df.iloc[:,1:], std_bank_df.iloc[:,0]\n",
-    "\n",
-    "# title = \"Learning Curves for SVM\" \n",
-    "# cv = ShuffleSplit(n_splits=100, test_size=0.2, random_state=0)\n",
-    "\n",
-    "\n",
-    "# estimator = svm.SVC(C=10, \n",
-    "#                     class_weight='balanced', \n",
-    "#                     gamma='scale', \n",
-    "#                     kernel='rbf', \n",
-    "#                     probability=True)\n",
-    "# plot_learning_curve(\n",
-    "#     estimator, title, X, y, ylim=(0.7, 1.01), cv=cv, n_jobs=4\n",
-    "# )\n",
     "\n",
     "plt.show()\n",
     "\n",
     "print( \"accuracy:\"+str(np.average(cross_val_score(svm_clf, X_test, y_test, scoring=  'accuracy'))))\n",
     "print(       \"f1:\"+str(np.average(cross_val_score(svm_clf, X_test, y_test, scoring=  'f1'))))\n",
     "print(\"precision:\"+str(np.average(cross_val_score(svm_clf, X_test, y_test, scoring=  'precision'))))\n",
-    "print(   \"recall:\"+str(np.average(cross_val_score(svm_clf, X_test, y_test, scoring=  'recall'))))\n"
+    "print(   \"recall:\"+str(np.average(cross_val_score(svm_clf, X_test, y_test, scoring=  'recall'))))\n",
+    "\n",
+    "\n",
+    "print( \"accuracy:\"+str(np.average(cross_val_score(estimator, X_test, y_test, scoring=  'accuracy'))))\n",
+    "print(       \"f1:\"+str(np.average(cross_val_score(estimator, X_test, y_test, scoring=  'f1'))))\n",
+    "print(\"precision:\"+str(np.average(cross_val_score(estimator, X_test, y_test, scoring=  'precision'))))\n",
+    "print(   \"recall:\"+str(np.average(cross_val_score(estimator, X_test, y_test, scoring=  'recall'))))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Классификация клиентов банка по их `Семейному положению` с помощью классификатора типа Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy:0.9344434829384662\n",
+      "f1:0.7831633377338111\n",
+      "precision:0.8980410453216949\n",
+      "recall:0.6707401032702237\n",
+      "accuracy:0.9427329638031979\n",
+      "f1:0.8082002594438539\n",
+      "precision:0.8914150380227603\n",
+      "recall:0.7518646012621917\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Random Forest\n",
+    "\n",
+    "rf = RandomForestClassifier()\n",
+    "\n",
+    "estimator = RandomForestClassifier(bootstrap=False, \n",
+    "                                   class_weight='balanced', \n",
+    "                                   max_depth=200, \n",
+    "                                   max_features=0.25, \n",
+    "                                   min_samples_leaf=1,\n",
+    "                                   min_samples_split=2,\n",
+    "                                   n_estimators=300)\n",
+    "\n",
+    "plt.show()\n",
+    "\n",
+    "print( \"accuracy:\"+str(np.average(cross_val_score(rf, X_test, y_test, scoring=  'accuracy'))))\n",
+    "print(       \"f1:\"+str(np.average(cross_val_score(rf, X_test, y_test, scoring=  'f1'))))\n",
+    "print(\"precision:\"+str(np.average(cross_val_score(rf, X_test, y_test, scoring=  'precision'))))\n",
+    "print(   \"recall:\"+str(np.average(cross_val_score(rf, X_test, y_test, scoring=  'recall'))))\n",
+    "\n",
+    "\n",
+    "print( \"accuracy:\"+str(np.average(cross_val_score(estimator, X_test, y_test, scoring=  'accuracy'))))\n",
+    "print(       \"f1:\"+str(np.average(cross_val_score(estimator, X_test, y_test, scoring=  'f1'))))\n",
+    "print(\"precision:\"+str(np.average(cross_val_score(estimator, X_test, y_test, scoring=  'precision'))))\n",
+    "print(   \"recall:\"+str(np.average(cross_val_score(estimator, X_test, y_test, scoring=  'recall'))))\n"
    ]
   }
  ],
