need to delete coments

--- a/IDA-practice-4/solution.ipynb
+++ b/IDA-practice-4/solution.ipynb
@@ -124,10 +124,6 @@
     "by_edu_df = bank_df.groupby('Education_Level')['Attrition_Flag'].mean()\n",
     "by_edu_df.plot(kind='bar', ylabel='Attrited Ratio')\n",
     "\n",
-    "# Marital_Status\n",
-    "# by_marry_df = bank_df.groupby('Marital_Status')['Attrition_Flag'].mean()\n",
-    "# by_marry_df.plot(kind='bar', ylabel='Attrited Ratio')\n",
-    "\n",
     "# Income_Category\n",
     "by_income_df = bank_df.groupby('Income_Category')['Attrition_Flag'].mean()\n",
     "by_income_df.plot(kind='bar', ylabel='Attrited Ratio')\n",
@@ -153,10 +149,10 @@
     "      bank_df[bank_df['Total_Revolving_Bal']!=0]['Attrition_Flag'].mean())\n",
     "\n",
     "# Utilization_Ratio\n",
-    "# print(\"Avg attrition of customers with 0 utilization ratio: \", \n",
-    "#       bank_df[bank_df['Avg_Utilization_Ratio']==bank_df['Avg_Utilization_Ratio'].min()]['Attrition_Flag'].mean())\n",
-    "# print(\"Avg attrition of customers with more utilization ratio: \", \n",
-    "#       bank_df[bank_df['Avg_Utilization_Ratio']!=bank_df['Avg_Utilization_Ratio'].min()]['Attrition_Flag'].mean())"
+    "print(\"Avg attrition of customers with 0 utilization ratio: \", \n",
+    "      bank_df[bank_df['Avg_Utilization_Ratio']==bank_df['Avg_Utilization_Ratio'].min()]['Attrition_Flag'].mean())\n",
+    "print(\"Avg attrition of customers with more utilization ratio: \", \n",
+    "      bank_df[bank_df['Avg_Utilization_Ratio']!=bank_df['Avg_Utilization_Ratio'].min()]['Attrition_Flag'].mean())"
    ]
   },
   {
@@ -701,8 +697,8 @@
     "bank_df['0_Total_Revolving_Bal'].fillna(0, inplace=True)\n",
     "# Creat new categorical feature based on whether total balance equals 0\n",
     "\n",
-    "# bank_df.loc[bank_df['Avg_Utilization_Ratio']==0, '0_Avg_Utilization_Ratio'] = 1\n",
-    "# bank_df['0_Avg_Utilization_Ratio'].fillna(0, inplace=True)\n",
+    "bank_df.loc[bank_df['Avg_Utilization_Ratio']==0, '0_Avg_Utilization_Ratio'] = 1\n",
+    "bank_df['0_Avg_Utilization_Ratio'].fillna(0, inplace=True)\n",
     "\n",
     "# Determine amount decrease or increase based on Amt_Chng_Q4_Q1\n",
     "bank_df.loc[bank_df['Total_Amt_Chng_Q4_Q1']<bank_df['Total_Amt_Chng_Q4_Q1'].median(), 'Amt_Q4_Q1_Dec'] = 1\n",
