--- a/IDA-practice-4/solution.ipynb
+++ b/IDA-practice-4/solution.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Практическая работа №4\n",
-    "##### Сиразетдинов Рустем (Вариант - 24)"
+    "##### Сиразетдинов Рустем (Вариант - 20)"
    ]
   },
   {
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,11 +34,14 @@
     "from sklearn.pipeline import make_pipeline\n",
     "# from pandas_profiling import ProfileReport\n",
     "from sklearn.impute import KNNImputer\n",
+    "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "# import lightgbm as lgb\n",
+    "\n",
     "from sklearn import svm\n",
+    "\n",
     "from scipy.special import boxcox1p\n",
     "from scipy.stats import boxcox_normmax\n",
     "pd.set_option('display.max_columns', 50)\n",
@@ -54,23 +57,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "bank_df = pd.read_csv(\"C:\\\\Users\\\\averu\\\\Documents\\\\git_local\\\\programming-practice\\\\IDA-practice-4\\\\BankChurners.csv\")\n",
     "bank_df\n",
     "\n",
-    "bank_df['Marital_Status'] = np.where(bank_df['Marital_Status'] == 'Married' , False, bank_df['Marital_Status'])\n",
-    "bank_df['Marital_Status'] = np.where(bank_df['Marital_Status'] == 'Single' , True, bank_df['Marital_Status'])\n",
-    "bank_df['Marital_Status'] = np.where(bank_df['Marital_Status'] == 'Divorced' , True, bank_df['Marital_Status'])\n",
-    "bank_df['Marital_Status'] = np.where(bank_df['Marital_Status'] == 'Unknown' , True, bank_df['Marital_Status'])\n",
+    "bank_df['Marital_Status'] = np.where(bank_df['Marital_Status'] == 'Married' , 0, bank_df['Marital_Status'])\n",
+    "bank_df['Marital_Status'] = np.where(bank_df['Marital_Status'] == 'Single' , 1, bank_df['Marital_Status'])\n",
+    "bank_df['Marital_Status'] = np.where(bank_df['Marital_Status'] == 'Divorced' , 1, bank_df['Marital_Status'])\n",
+    "bank_df['Marital_Status'] = np.where(bank_df['Marital_Status'] == 'Unknown' , 1, bank_df['Marital_Status'])\n",
     "\n",
-    "# Drop useless columns\n",
+    "# Выбрасываем некоторые признаки\n",
     "drop_cols = list(bank_df.iloc[:,[0,-1,-2, -3, 6]].columns)\n",
     "bank_df.drop(columns=drop_cols, inplace=True)\n",
     "\n",
-    "# Chnage response from categorical to int\n",
+    "# Трансформация категориального признака к целочисленному типу `int`\n",
     "bank_df['Attrition_Flag'] = (bank_df['Attrition_Flag']=='Attrited Customer').astype(int)"
    ]
   },
@@ -83,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -146,13 +149,7 @@
     "print(\"Avg attrition of customers with 0 revolving balance: \", \n",
     "      bank_df[bank_df['Total_Revolving_Bal']==0]['Attrition_Flag'].mean())\n",
     "print(\"Avg attrition of customers with more revolving balance: \", \n",
-    "      bank_df[bank_df['Total_Revolving_Bal']!=0]['Attrition_Flag'].mean())\n",
-    "\n",
-    "# Utilization_Ratio\n",
-    "print(\"Avg attrition of customers with 0 utilization ratio: \", \n",
-    "      bank_df[bank_df['Avg_Utilization_Ratio']==bank_df['Avg_Utilization_Ratio'].min()]['Attrition_Flag'].mean())\n",
-    "print(\"Avg attrition of customers with more utilization ratio: \", \n",
-    "      bank_df[bank_df['Avg_Utilization_Ratio']!=bank_df['Avg_Utilization_Ratio'].min()]['Attrition_Flag'].mean())"
+    "      bank_df[bank_df['Total_Revolving_Bal']!=0]['Attrition_Flag'].mean())\n"
    ]
   },
   {
@@ -164,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +593,7 @@
        "[10127 rows x 22 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +614,6 @@
     "\n",
     "tmp_bank_df = pd.get_dummies(tmp_bank_df)\n",
     "\n",
-    "# Use KNN to fill for each column\n",
     "for col in ['Income_Category', 'Education_Level']:\n",
     "    imputer = KNNImputer(n_neighbors = 5)\n",
     "    fill_tmp_bank_df = pd.DataFrame(imputer.fit_transform(tmp_bank_df.iloc[:,1:]), \n",
@@ -642,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -686,30 +682,24 @@
     "# One-hot encoding\n",
     "bank_df = pd.get_dummies(bank_df)\n",
     "\n",
-    "# Add new features\n",
-    "# Avg trans amt \n",
+    "\n",
     "bank_df['Avg_Trans_Amt'] = bank_df['Total_Trans_Amt']/bank_df['Total_Trans_Ct']\n",
-    "# Creat new categorical feature based on whether credit limit equals min credit limit\n",
+    "\n",
     "bank_df.loc[bank_df['Credit_Limit']==bank_df['Credit_Limit'].min(), 'Min_Credit_Limit'] = 1\n",
     "bank_df['Min_Credit_Limit'].fillna(0, inplace=True)\n",
-    "# Creat new categorical feature based on whether total balance equals 0\n",
+    "\n",
     "bank_df.loc[bank_df['Total_Revolving_Bal']==0, '0_Total_Revolving_Bal'] = 1\n",
     "bank_df['0_Total_Revolving_Bal'].fillna(0, inplace=True)\n",
-    "# Creat new categorical feature based on whether total balance equals 0\n",
     "\n",
-    "bank_df.loc[bank_df['Avg_Utilization_Ratio']==0, '0_Avg_Utilization_Ratio'] = 1\n",
-    "bank_df['0_Avg_Utilization_Ratio'].fillna(0, inplace=True)\n",
-    "\n",
-    "# Determine amount decrease or increase based on Amt_Chng_Q4_Q1\n",
     "bank_df.loc[bank_df['Total_Amt_Chng_Q4_Q1']<bank_df['Total_Amt_Chng_Q4_Q1'].median(), 'Amt_Q4_Q1_Dec'] = 1\n",
     "bank_df['Amt_Q4_Q1_Dec'].fillna(0, inplace=True)\n",
-    "# Determine count decrease or increase based on Ct_Chng_Q4_Q1\n",
+    "\n",
     "bank_df.loc[bank_df['Total_Ct_Chng_Q4_Q1']<bank_df['Total_Ct_Chng_Q4_Q1'].median(), 'Ct_Q4_Q1_Dec'] = 1\n",
     "bank_df['Ct_Q4_Q1_Dec'].fillna(0, inplace=True)\n",
     "\n",
     "\n",
     "\n",
-    "# Transformation\n",
+    "# Трансформация введенных новых признаков и признаков из таблицы \n",
     "skewed_col = ['Total_Trans_Amt', 'Credit_Limit', 'Avg_Open_To_Buy']\n",
     "trans_bank_df = bank_df.copy()\n",
     "for col in skewed_col:\n",
@@ -722,7 +712,7 @@
     "    plt.hist(trans_bank_df[col])\n",
     "    plt.title(f\"{col}: After\")\n",
     "\n",
-    "# Standardize\n",
+    "# Стандартизация признаков\n",
     "std = StandardScaler()\n",
     "std_df = pd.DataFrame(std.fit_transform(trans_bank_df.iloc[:,1:]), \n",
     "                      index = trans_bank_df.index, \n",
@@ -739,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,17 +891,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy:0.9107452191064231\n",
-      "f1:0.6753863683053034\n",
-      "precision:0.8492326563990732\n",
-      "recall:0.5633390705679862\n",
       "accuracy:0.9048280593431095\n",
       "f1:0.7060378855046817\n",
       "precision:0.7263938934825012\n",
@@ -924,20 +910,34 @@
     "X_train, X_test, y_train, y_test = train_test_split(std_bank_df.iloc[:,1:], std_bank_df.iloc[:,0], test_size=0.25, random_state=42)\n",
     "svm_clf = svm.SVC()\n",
     "\n",
+    "# Поиск наилучших параметров для классфикации методом опорных векторов \n",
+    "svm_param = {'C': [0.1, 1, 10, 100], \n",
+    "             'gamma': ['scale', 'auto'],\n",
+    "             'kernel': ['rbf', 'poly', 'sigmoid'],\n",
+    "             'probability':[True],\n",
+    "             'class_weight':['balanced', 'none']}\n",
+    "svm_grid = GridSearchCV(svm_clf, svm_param, n_jobs=-1, cv=5, verbose=1)\n",
+    "svm_grid.fit(X_train, y_train)\n",
+    "print(\"Best param: \", svm_grid.best_params_)\n",
+    "svm_pred = svm_grid.predict(X_test)\n",
+    "svm_pred_prob = svm_grid.predict_proba(X_test)[:,1]\n",
+    "svm_pred_df = pd.DataFrame({\"pred\":svm_pred, \"prob\":svm_pred_prob, \"actual\":y_test})\n",
+    "# mannually adjust pred based on prob\n",
+    "thresh = np.quantile(svm_pred_prob, (1-y_train.mean()))\n",
+    "svm_pred_df['pred'] = (svm_pred_df['prob']>thresh).astype(int)\n",
+    "svm_pred_df\n",
+    "\n",
+    "X, y = std_bank_df.iloc[:,1:], std_bank_df.iloc[:,0]\n",
+    "\n",
+    "\n",
     "estimator = svm.SVC(C=10, \n",
     "                    class_weight='balanced', \n",
     "                    gamma='scale', \n",
     "                    kernel='rbf', \n",
     "                    probability=True)\n",
-    "\n",
+    "estimator.fit(X_train, y_train)\n",
     "\n",
     "plt.show()\n",
-    "\n",
-    "print( \"accuracy:\"+str(np.average(cross_val_score(svm_clf, X_test, y_test, scoring=  'accuracy'))))\n",
-    "print(       \"f1:\"+str(np.average(cross_val_score(svm_clf, X_test, y_test, scoring=  'f1'))))\n",
-    "print(\"precision:\"+str(np.average(cross_val_score(svm_clf, X_test, y_test, scoring=  'precision'))))\n",
-    "print(   \"recall:\"+str(np.average(cross_val_score(svm_clf, X_test, y_test, scoring=  'recall'))))\n",
-    "\n",
     "\n",
     "print( \"accuracy:\"+str(np.average(cross_val_score(estimator, X_test, y_test, scoring=  'accuracy'))))\n",
     "print(       \"f1:\"+str(np.average(cross_val_score(estimator, X_test, y_test, scoring=  'f1'))))\n",
@@ -954,21 +954,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy:0.9344434829384662\n",
-      "f1:0.7831633377338111\n",
-      "precision:0.8980410453216949\n",
-      "recall:0.6707401032702237\n",
-      "accuracy:0.9427329638031979\n",
-      "f1:0.8082002594438539\n",
-      "precision:0.8914150380227603\n",
-      "recall:0.7518646012621917\n"
+      "accuracy:0.9407590180165432\n",
+      "f1:0.8085149959922957\n",
+      "precision:0.888746562219956\n",
+      "recall:0.7494549627079747\n"
      ]
     }
    ],
@@ -976,6 +972,24 @@
     "# Random Forest\n",
     "\n",
     "rf = RandomForestClassifier()\n",
+    "n_estimators = [100, 200, 300]\n",
+    "max_features = [0.5, 0.25, 'log2', 'sqrt']\n",
+    "max_depth = [100, 200, 'none']\n",
+    "min_samples_split = [2, 5, 10]\n",
+    "min_samples_leaf = [1, 2, 4]\n",
+    "bootstrap = [True, False]\n",
+    "class_weight = ['balanced', 'none']\n",
+    "rf_param = {'n_estimators': n_estimators,\n",
+    "            'max_features': max_features,\n",
+    "            'max_depth': max_depth,\n",
+    "            'min_samples_split': min_samples_split,\n",
+    "            'min_samples_leaf': min_samples_leaf,\n",
+    "            'bootstrap': bootstrap,\n",
+    "            'class_weight': class_weight}\n",
+    "rf_grid = GridSearchCV(rf, rf_param, n_jobs=-1, cv=5, verbose=1)\n",
+    "rf_grid.fit(X_train, y_train)\n",
+    "\n",
+    "\n",
     "\n",
     "estimator = RandomForestClassifier(bootstrap=False, \n",
     "                                   class_weight='balanced', \n",
@@ -984,14 +998,9 @@
     "                                   min_samples_leaf=1,\n",
     "                                   min_samples_split=2,\n",
     "                                   n_estimators=300)\n",
+    "estimator.fit(X_train, y_train)\n",
     "\n",
     "plt.show()\n",
-    "\n",
-    "print( \"accuracy:\"+str(np.average(cross_val_score(rf, X_test, y_test, scoring=  'accuracy'))))\n",
-    "print(       \"f1:\"+str(np.average(cross_val_score(rf, X_test, y_test, scoring=  'f1'))))\n",
-    "print(\"precision:\"+str(np.average(cross_val_score(rf, X_test, y_test, scoring=  'precision'))))\n",
-    "print(   \"recall:\"+str(np.average(cross_val_score(rf, X_test, y_test, scoring=  'recall'))))\n",
-    "\n",
     "\n",
     "print( \"accuracy:\"+str(np.average(cross_val_score(estimator, X_test, y_test, scoring=  'accuracy'))))\n",
     "print(       \"f1:\"+str(np.average(cross_val_score(estimator, X_test, y_test, scoring=  'f1'))))\n",
