--- a/IDA/IDA-practice-5/solution.ipynb
+++ b/IDA/IDA-practice-5/solution.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('C:\\\\Users\\\\averu\\\\Documents\\\\git_local\\\\programming-practice\\\\IDA-practice-5\\\\insurance.csv')"
+    "data = pd.read_csv('C:\\\\Users\\\\averu\\\\Documents\\\\git_local\\\\programming-practice\\\\IDA\\\\IDA-practice-5\\\\insurance.csv')"
    ]
   },
   {
@@ -2797,7 +2797,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Как итог, получим, что описания почти 90% дисперсии данных достаточно 6-х компонент. По построенным линейным моделям видно, что наибольший вклад вносит признак `children`"
+    "Как итог, получим, что описания почти 90% дисперсии данных достаточно 6-х компонент. По построенным линейным моделям видно, что наибольший вклад вносит признак `bmi`"
    ]
   },
   {
