--- a/IDA/IDA-practice-6/solution.ipynb
+++ b/IDA/IDA-practice-6/solution.ipynb
@@ -50,10 +50,12 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "# Load data\n",
-    "ins = pd.read_csv('C:\\\\Users\\\\averu\\\\Documents\\\\git_local\\\\programming-practice\\\\IDA-practice-5\\\\insurance.csv')\n",
+    "# Выгрузка датасета\n",
+    "ins = pd.read_csv('C:\\\\Users\\\\averu\\\\Documents\\\\git_local\\\\programming-practice\\\\IDA\\\\IDA-practice-5\\\\insurance.csv')\n",
     "print(\"There are {:,} observations and {} columns in the data set.\".format(ins.shape[0], ins.shape[1]))\n",
     "print(\"There are {} missing values in the data.\".format(ins.isna().sum().sum()))\n",
+    "\n",
+    "\n",
     "ins['sex'] = ins['sex'].str.capitalize()\n",
     "ins['smoker'] = ins['smoker'].apply(lambda x: 'Smoker' if x=='yes' else 'Non-Smoker')\n",
     "ins['region'] = ins['region'].str.capitalize()"
@@ -17103,17 +17105,17 @@
     "\n",
     "for i in regions:\n",
     "    \n",
-    "    # Filter data by region\n",
+    "    # Разделение датасета по региону\n",
     "    ins_df = ins[ins.region==i]\n",
     "    X=ins_df.drop(['charges', 'region'], axis=1)\n",
     "    y=ins_df.charges\n",
     "    \n",
     "    \n",
-    "    # Add polynomial features\n",
+    "    \n",
     "    pf = PolynomialFeatures(degree=2, include_bias=False)\n",
     "    X_pf = pd.DataFrame(data=pf.fit_transform(X), columns=pf.get_feature_names(X.columns))\n",
     "    \n",
-    "    # Create training and test sets\n",
+    "    # Распределение на выборки\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X_pf, y, test_size=0.2, random_state=1)\n",
     "    X_train = pd.DataFrame(X_train, columns = X_pf.columns)\n",
     "    X_test = pd.DataFrame(X_test, columns = X_pf.columns)\n",
@@ -17121,11 +17123,11 @@
     "    print(\"\\nRegion: {}\\n\".format(i))\n",
     "    print(\"Train Shape:{} {}  Test Shape:{} {}\".format(X_train.shape, y_train.shape, X_test.shape, y_test.shape))\n",
     "    \n",
-    "    # Scale features\n",
+    "    \n",
     "    X_train = pd.DataFrame(data=s.fit_transform(X_train), columns=X_pf.columns)\n",
     "    X_test = pd.DataFrame(data=s.transform(X_test), columns=X_pf.columns)\n",
     "    \n",
-    "    # Tuning \n",
+    "    \n",
     "    grid = {'learning_rate': [0.0001, 0.001, 0.01, 0.1, 0.25, 0.5],\n",
     "            'n_estimators': [int(x) for x in np.linspace(start = 200, stop = 1000, num = 5)],\n",
     "            'subsample': [0.5, 0.8, 1],\n",
